# close_enough

./: Cargo.toml  README.md
src/: ce.rs  cle.rs  lib.rs
src/scripts/: ce.sh  ce_with_hop.sh  hop.sh
