[package]
name = "close_enough"
version = "0.2.2"
authors = ["Claire Harris <wishing.engine@gmail.com>"]
description = "Simple fuzzy-searching function and command line tool."
documentation = "https://docs.rs/close_enough"
homepage = "https://github.com/mistodon/close_enough"
repository = "https://github.com/mistodon/close_enough"
readme = "README.md"
keywords = ["cli", "terminal", "fuzzy", "search", "find"]
categories = ["command-line-interface", "filesystem"]
license = "WTFPL"

[profile.release]
panic = "abort"
lto = true

[dependencies.clap]
version = "~2.32.0"
optional = true
default-features = false
features = ["color", "wrap_help"]

[features]
cli = ["clap"]
default = ["cli"]

[[bin]]
name = "cle"
path = "src/cle.rs"
required-features = ["cli"]
doc = false
