[package]
name = "close_enough"
version = "0.4.0"
edition = "2018"
authors = ["Vi <***redacted.email@redacted.nope***>"]
description = "Simple fuzzy-searching function and command line tool."
documentation = "https://docs.rs/close_enough"
homepage = "https://github.com/mistodon/close_enough"
repository = "https://github.com/mistodon/close_enough"
readme = "README.md"
keywords = ["cli", "terminal", "fuzzy", "search", "find"]
categories = ["command-line-interface", "filesystem"]
license = "CC0-1.0"

[profile.release]
panic = "abort"
lto = true

[dependencies]
home = { version = "0.5.3", optional = true }
ignore = "0.4.17"
structopt = { version = "~0.3.21", optional = true }

[features]
cli = ["home", "structopt"]
default = ["cli"]

[[bin]]
name = "cle"
path = "src/cle.rs"
required-features = ["cli"]
doc = false
