[package]
name = "close_enough"
version = "0.6.0"
edition = "2024"
authors = ["Vi <violet@hey.com>"]
description = "Simple fuzzy-searching function and command line tool."
documentation = "https://docs.rs/close_enough"
homepage = "https://github.com/mistodon/close_enough"
repository = "https://github.com/mistodon/close_enough"
readme = "README.md"
keywords = ["cli", "terminal", "fuzzy", "search", "find"]
categories = ["command-line-interface", "filesystem"]
license = "CC0-1.0"

[profile.release]
panic = "abort"
lto = true

[dependencies]
directories = { version = "~4.0.1", optional = true }
ignore = "~0.4.18"
structopt = { version = "~0.3.26", optional = true }

[features]
cli = ["directories", "structopt"]
default = ["cli"]

[[bin]]
name = "cle"
path = "src/cle.rs"
required-features = ["cli"]
doc = false
